--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "color": "tsc && vite build --mode color",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,9 +14,27 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.17",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-legacy": "^2.1.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
+    "cssnano-preset-advanced": "^5.3.8",
+    "doiuse": "^4.4.1",
+    "postcss": "^8.4.14",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-custom-selectors": "^6.0.3",
+    "postcss-inline-svg": "^5.0.0",
+    "postcss-jit-props": "^1.0.7",
+    "postcss-plugin": "^1.0.0",
+    "postcss-pseudo-class-enter": "^5.0.0",
+    "postcss-utilities": "^0.8.4",
+    "postcss-will-change": "^4.0.1",
+    "rucksack-css": "^1.0.2",
+    "sass": "^1.54.9",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
