--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -35,6 +37,7 @@
     "rucksack-css": "^1.0.2",
     "sass": "^1.54.9",
     "tailwindcss": "^3.1.8",
+    "terser": "^5.15.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
